--- a/mainmatter/04_approach.tex
+++ b/mainmatter/04_approach.tex
@@ -42,7 +42,7 @@ In this equation $cpu\_usage$ is a value in percent of the number of single core
 
 \subsection{Picking the Right Step Size}
 \label{sub:const_stepsize}
-One immediate issue encountered with the CPU bandit was related to the step size. The initial step size $\alpha$ was $0.1$ which would be an appropriate step size for a bounded reward function with a maximum less than 20 or a function which is known to have a standard deviation less than that. However the reward function used in \ref{bandit1_reward} has the bounds [ $-time*(cpus+1)$ , $-time$ ] and as such is effectively unbounded since time can be arbitrarily large (all tasks are of course configured with a maximum runtime but these are user estimates and are always several orders of magnitude larger than the normal time it takes, e.g. maximum runtime is usually an order of days whereas the maximum runtime seen for any task in the course of these experiments was an order of minutes). Additionally over the course of the experiments in this thesis the standard deviation which was observed for the reward function was usually too large for this step size as well.  The danger in using an inappropriate constant step size for a given reward function is that when the bandit receives a reward which is larger or smaller than the previous average, the step taken in the direction of that action will be too large and the bandits preferences will be updated such that the given action is always preferred and no other actions are tried any more. This causes the bandit to cease with the exploration phase too early. This effect was most commonly occurring for tasks which took longer than 20 seconds to complete and was especially pronounced for tasks with runtimes of 100 seconds and more.  For these tasks the inherent volatility of the reward function (volatile relative to a step size of 0.1) meant that the bandits were converging very early and often had not explored the other actions at all. For example if one allocation receives a reward of -150 and and the first two allocations had had an average reward of 350 then for a step size of 0.1 the preference for the new allocation will increase by 5. Because of the exponential nature of the soft max distribution function used on the preferences this increase could result in the bandit converging to always pick the third allocation without any more exploration. 
+One immediate issue encountered with the CPU bandit was related to the step size. The initial step size $\alpha$ was $0.1$ which would be an appropriate step size for a bounded reward function with a maximum less than 20 or a function which is known to have a standard deviation less than that. However the reward function used in \ref{bandit1_reward} has the bounds [ $-time*(cpus+1)$ , $-time$ ] and as such is effectively unbounded since time can be arbitrarily large (all tasks are of course configured with a maximum runtime but these are user estimates and are always several orders of magnitude larger than the normal time it takes, e.g. maximum runtime is usually an order of days whereas the maximum runtime seen for any task in the course of these experiments was an order of minutes). Additionally over the course of the experiments in this thesis the standard deviation which was observed for the reward function was usually too large for this step size as well.  The danger in using an inappropriate constant step size for a given reward function is that when the bandit receives a reward which is larger or smaller than the previous average, the step taken in the direction of that action will be too large and the bandits preferences will be updated such that the given action is always preferred and no other actions are tried any more. This causes the bandit to cease exploration early. This effect was most commonly occurring for tasks which took longer than 20 seconds to complete and was especially pronounced for tasks with runtimes of 100 seconds and more.  For these tasks the inherent volatility of the reward function (volatile relative to a step size of 0.1) meant that the bandits were converging very early and often had not explored the other actions at all. For example if one allocation receives a reward of -150 and and the first two allocations had had an average reward of 350 then for a step size of 0.1 the preference for the new allocation will increase by 5. Because of the exponential nature of the soft max distribution function used on the preferences this increase could result in the bandit converging to always pick the third allocation without any more exploration. 
 
 % \begin{figure}[ht]
     %\centering
@@ -99,20 +99,6 @@ It should be noted however that these changes mean that for optimal performance 
 \label{sec:q_agent}
 
 Similar to the approach with the gradient bandits, there was one Q-learning agent per unique task. The Q-learning agent’s state was always the current allocation of cpu and memory for the given task, and as its set of actions it could choose between incrementing or decrementing the amount of cpus or memory, or it could do nothing. To limit the state space the maximum and minimum number of cpus and memory as well as the amount by which they were incremented or decremented was based first on the maximum resources of the system and secondly on the default allocation given to the task by the developers of the workflow. When the task was scheduled by the agent for the first time it would start in the default state.
-
-The pseudo code for the Q-learning agent can be seen in \ref{alg:q-learning}.
-
-\begin{algorithm}[H]
-Initialise $Q(s,a) = 0$\\
-Initialise start state $s$\\
-\While{\textbf{True}}{
-        \eIf{$random < \epsilon$}{choose random action $a$}{choose action $a = max_a (Q(s,a))$}
-        Take action $a$, receive reward $r$, transition to state $\hat{s}$\\
-        Update $Q_{new}(s,a) = Q(s,a) + \alpha \times (r + \gamma \times max_{\hat{a}}(Q(\hat{s},\hat{a})) - Q(s,a) )$\\
-}
-\caption{Q-learning Agent Pseudocode}
-\label{alg:q-learning}
-\end{algorithm}
 
 
 For the Q-Agent a different reward function was used than for the gradient bandit- primarily because it also had to incorporate memory but also as part of an attempt to try slightly different reward functions and approaches. 
