--- a/refs.bib
+++ b/refs.bib
@@ -204,16 +204,6 @@
 	pages        = {219–237},
 	doi          = {10.1155/2005/128026}
 }
-@inproceedings{resource_provisioning,
-	title        = {Resource Provisioning Options for Large-Scale Scientific Workflows},
-	author       = {Juve, Gideon and Deelman, Ewa},
-	year         = 2008,
-	booktitle    = {2008 IEEE Fourth International Conference on eScience},
-	volume       = {},
-	number       = {},
-	pages        = {608--613},
-	doi          = {10.1109/eScience.2008.160}
-}
 @article{kubernetes,
 	title        = {Borg, Omega, and kubernetes},
 	author       = {Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
@@ -230,4 +220,13 @@
 	year         = 2013,
 	journal      = {Proceedings of the 4th annual Symposium on Cloud Computing},
 	doi          = {10.1145/2523616.2523633}
+}
+@article{watkins_dayan, title={Q-learning}, volume={8}, DOI={10.1007/bf00992698}, number={3-4}, journal={Machine Learning}, author={Watkins, Christopher J. and Dayan, Peter}, year={1992}, pages={279–292}} 
+@inproceedings{ding_efficient,
+  title={An efficient algorithm for generalized linear bandit: Online stochastic gradient descent and thompson sampling},
+  author={Ding, Qin and Hsieh, Cho-Jui and Sharpnack, James},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={1585--1593},
+  year={2021},
+  organization={PMLR}
 }
