--- a/thesis.tex
+++ b/thesis.tex
@@ -9,6 +9,8 @@
 \usepackage[pdftex]{graphicx}
 \usepackage[bindingoffset=1cm,centering,includeheadfoot,margin=2cm]{geometry}
 
+\usepackage{amsmath,amsfonts,amssymb,amsthm} % mathematical expression, symbols, fonts, and the whole theorem environment engine
+
 \usepackage[
     citestyle=numeric-comp,
     backend=bibtex,
